workloads/workload-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "12"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"client","namespace":"oai"},"spec":{"replicas":10,"selector":{"matchLabels":{"app":"client"}},"template":{"metadata":{"labels":{"app":"client"}},"spec":{"containers":[{"command":["python","-u","/app/client.py"],"env":[{"name":"THREADS","value":"4"}],"image":"python:3.11-alpine","name":"client","volumeMounts":[{"mountPath":"/app","name":"s"}]}],"volumes":[{"configMap":{"name":"oai-client"},"name":"s"}]}}}}
  creationTimestamp: "2026-09-03T18:00:26Z"
  generation: 43
  name: client
  namespace: oai
  resourceVersion: "2144079"
  uid: 8b5f8d6a-feed-40f8-b036-fd33e64d6791
spec:
  progressDeadlineSeconds: 600
  replicas: 30
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: client
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-09-03T15:21:08-07:00"
      labels:
        app: client
    spec:
      containers:
      - command:
        - python
        - -u
        - /app/client.py
        image: python:3.11-alpine
        imagePullPolicy: IfNotPresent
        name: client
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app
          name: s
      dnsConfig:
        options:
        - name: timeout
          value: "30"
        - name: attempts
          value: "1"
        - name: ndots
          value: "1"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: oai-client-fixed
        name: s
status:
  availableReplicas: 30
  conditions:
  - lastTransitionTime: "2026-09-03T18:00:26Z"
    lastUpdateTime: "2026-09-08T20:43:58Z"
    message: ReplicaSet "client-79d7d84d76" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2026-09-08T20:47:52Z"
    lastUpdateTime: "2026-09-08T20:47:52Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 43
  readyReplicas: 30
  replicas: 30
  updatedReplicas: 30
